--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript calculator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>my name is ashraful alam</h1>
-    <h2>my father name is joynal abedin</h2>
-    <h3>my mother name is rasheda begum</h3>
+    <div class="calculator">
+        <form action="" name="form">
+            <input type="text" value="" class="form-control main-bar" name="display" placeholder="0">
+            <div class="button-area">
+                <div class="line">
+                    <input type="button" name="btn" value="M-" class="btn btn-info">
+                    <input type="button" name="btn" value="M+" class="btn btn-info">
+                    <input type="button" name="btn" value="MC" class="btn btn-info">
+                    <input type="button" name="btn" value="C" class="btn btn-warning" onclick="display.value=null">
+                </div>
+                <div class="line">
+                    <input type="button" name="btn" value="7" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="8" class="btn btn-info onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="9" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="*" class="btn btn-warning" onclick="calculate(this.value)">
+                </div>
+                <div class="line">
+                    <input type="button" name="btn" value="4" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="5" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="6" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="/" class="btn btn-warning" onclick="calculate(this.value)">
+                </div>
+                <div class="line">
+                    <input type="button" name="btn" value="1" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="2" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="3" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="-" class="btn btn-warning" onclick="calculate(this.value)">
+                </div>
+                <div class="line">
+                    <input type="button" name="btn" value="0" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="00" class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="." class="btn btn-info" onclick="calculate(this.value)">
+                    <input type="button" name="btn" value="+" class="btn btn-warning" onclick="calculate(this.value)">
+                </div>
+                <div class="last">
+                    <input type="button" name="btn" value="=" class="btn btn-success"onclick="display.value=eval(display.value)">
+                </div>
+            </div>
+
+        </form>
+    </div>
+
+    <script>
+    function calculate(x){
+        form.display.value = form.display.value + x;
+
+ 
+
+   }
+
+    </script>
 </body>
 </html>
